--- a/pages/user.html
+++ b/pages/user.html
@@ -12,68 +12,81 @@
 </head>
 
 <body class="h-full scroll-smooth">
-    <!-- Navbar -->
-    <nav id="navbar"
-        class="fixed w-full h-20 py-4 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
-        <a href="../index.html" class="text-lg font-bold flex items-center">
-            <img src="../assets/roro_transparent.png" class="w-12 h-12" alt="Logo" />
-        </a>
-
-        <!-- Desktop Menu -->
-        <div class="hidden md:flex space-x-6 text-lg">
-            <a href="../index.html" class="nav-link text-black hover:text-stone-500 transition text-stone-100">Home</a>
-            <a href="../pages/booking.html"
-                class="nav-link text-black hover:text-stone-500 transition text-stone-100">Routes & Schedules</a>
-            <a href="#" class="nav-link text-black hover:text-stone-500 transition text-stone-100">Rates</a>
-        </div>
-
-        <!-- Mobile Menu Button -->
-        <button id="menu-button" class="md:hidden text-black focus:outline-none">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-            </svg>
-        </button>
-
-        <!-- Mobile Menu -->
-        <div id="mobile-menu"
-            class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
-            <a href="../index.html" class="block py-2 text-stone-100">Home</a>
-            <a href="../pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
-            <a href="#" class="block py-2 text-stone-100">Rates</a>
-        </div>
-    </nav>
-
-    <div class="relative w-full h-20">
-        <div class="bg-blue-700 absolute inset-0"></div>
-        <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center">
-            <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">User Dashboard</p>
-            <!-- <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a> -->
-        </div>
+    <div id="loader" class="z-100 fixed inset-0 bg-white flex items-center justify-center z-50 transition-opacity duration-500">
+        <div class="w-12 h-12 border-4 border-blue-500 border-t-transparent rounded-full animate-spin"></div>
     </div>
 
-    <!-- MAIN CONTENTS HERE PLS -->
+    <div>
 
-    <section class="flex flex-row sm:flex-col gap-10 w-screen mx-auto p-5 bg-white py-30 pt-10 shadow-lg rounded-lg justify-center items-center">
-        <div class="p-5 bg-stone-300 rounded-lg shadow w-full sm:w-auto text-center">
-            <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">User Information</p>
-            <p class="text-gray-700 mt-2">Name: <span id="userName"></span></p>
-            <p class="text-gray-700">Email: <span id="userEmail"></span></p>
+
+
+        <!-- Navbar -->
+        <nav id="navbar"
+            class="fixed w-full h-20 py-4 px-4 sm:px-10 flex items-center justify-between z-50 transition-all duration-300 bg-transparent">
+            <a href="../index.html" class="text-lg font-bold flex items-center">
+                <img src="../assets/roro_transparent.png" class="w-12 h-12" alt="Logo" />
+            </a>
+
+            <!-- Desktop Menu -->
+            <div class="hidden md:flex space-x-6 text-lg">
+                <a href="../index.html"
+                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Home</a>
+                <a href="/pages/booking.html"
+                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Routes & Schedules</a>
+                <a href="/pages/rates.html"
+                    class="nav-link text-black hover:text-orange-500 transition text-stone-100">Rates</a>
+            </div>
+
+            <!-- Mobile Menu a -->
+            <button id="menu-button" class="md:hidden text-black focus:outline-none">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7">
+                    </path>
+                </svg>
+            </button>
+
+            <!-- Mobile Menu -->
+            <div id="mobile-menu"
+                class="hidden absolute top-20 left-0 w-full bg-blue-400 text-white text-center py-4 md:hidden">
+                <a href="../index.html" class="block py-2 text-stone-100">Home</a>
+                <a href="/pages/booking.html" class="block py-2 text-stone-100">Routes & Schedules</a>
+                <a href="/pages/rates.html" class="block py-2 text-stone-100">Rates</a>
+            </div>
+        </nav>
+
+        <div class="relative w-full h-20">
+            <div class="bg-blue-700 absolute inset-0"></div>
+            <div class="absolute inset-0 flex flex-col items-center justify-center text-white text-center">
+                <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">User Dashboard</p>
+                <!-- <a href="/pages/booking.html" class="mt-4 bg-blue-700 hover:bg-blue-800 px-5 py-2 text-sm sm:text-base rounded-lg transition">Book Now</a> -->
+            </div>
         </div>
-    
-        <div class="p-5 bg-stone-300 rounded-lg shadow w-full sm:w-auto text-center">
-            <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">Tickets</p>
-            <ul id="ticketList" class="mt-3 space-y-2">
-                <!--TICKET TEMPS GO HERE-->
-            </ul>
 
-        </div>
-    </section>
-    
+        <!-- MAIN CONTENTS HERE PLS -->
 
-    <footer class="w-full bg-gray-900 py-10 text-center text-white">
-        &copy; 2025 Montecillo Roro. All Rights Reserved.
-    </footer>
+        <section
+            class="flex flex-row sm:flex-col gap-10 w-screen mx-auto p-5 bg-white py-30 pt-10 shadow-lg rounded-lg justify-center items-center">
+            <div class="p-5 bg-stone-300 rounded-lg shadow w-full sm:w-auto text-center">
+                <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">User Information</p>
+                <p class="text-gray-700 mt-2">Name: <span id="userName"></span></p>
+                <p class="text-gray-700">Email: <span id="userEmail"></span></p>
+            </div>
+
+            <div class="p-5 bg-stone-300 rounded-lg shadow w-full sm:w-auto text-center">
+                <p class="text-3xl sm:text-2xl font-bold drop-shadow-lg">Tickets</p>
+                <ul id="ticketList" class="mt-3 space-y-2">
+                    <!--TICKET TEMPS GO HERE-->
+                </ul>
+
+            </div>
+        </section>
+
+
+        <footer class="w-full bg-gray-900 py-10 text-center text-white">
+            &copy; 2025 Montecillo Roro. All Rights Reserved. | Javaitech
+        </footer>
+    </div>
 </body>
 
 </html>
